# maze_agent

./: .gitignore  CLAUDE.md  README.md  env.example  main.py  pyproject.toml
.claude/: settings.json
.github/workflows/: test.yml
docs/: 01_project_overview.md  02_maze_representation.md  03_cost_protection.md
docs/other/: 20251229_architecture.md
docs/plans/: 20251230-plan-test-protections-claude.md
docs/plans/implemented/: 20251230-plan-api-delay-protection-claude.md  20251230-plan-max-api-calls-protection-claude.md
mazes/: 01_simple_north.txt  02_corridor_north.txt  03_secret_north.txt  04_simple_south.txt  05_secret_vs_deadend.txt  06_grid_2x2_connected.txt  07_grid_2x2_all_secrets.txt  08_grid_2x2_no_start_exit_door.txt
src/maze_agent/: __init__.py  agent.py
src/maze_agent/cli/: __init__.py  list_mazes.py  main.py
src/maze_agent/common/: __init__.py  action_parser.py  claude_client.py  maze_loader.py  maze_state.py
tests/: __init__.py  test_api_delay.py  test_max_api_calls.py
tests/common/: __init__.py  test_action_parser.py  test_maze_loader.py  test_maze_state.py
